@@ -60,5 +60,9 @@ Examples:
 # Add/Update a var, ensuring complete file in name=value format
   crudini --ini-options=nospace --set config_file section parameter value
 
+# Rewrite ini file to ensure a single blank line between sections,
+# and no leading or trailing blank lines
+  crudini --ini-options=sectionspace --set config_file ""
+
 # Read indented ini file, like .gitconfig
   crudini --ini-options=ignoreindent --format=lines --get ~/.gitconfig
